--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "alea": "0.0.9",
     "babel": "^6.5.2",
     "babel-cli": "^6.18.0",
     "babel-plugin-external-helpers": "^6.18.0",
     "babel-plugin-transform-es2015-modules-amd": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "dat-gui": "^0.5.0",
+    "lodash": "^4.17.2",
+    "materialize-css": "^0.97.8",
+    "noisejs": "^2.1.0",
     "rollup-plugin-babel": "^2.6.1",
+    "simplex-noise": "^2.2.0",
     "webpack": "^1.13.3"
   },
   "devDependencies": {
