--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "babel-plugin-external-helpers": "^6.18.0",
     "babel-plugin-transform-es2015-modules-amd": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
+    "benchmark": "^2.1.2",
     "dat-gui": "^0.5.0",
     "lodash": "^4.17.2",
     "materialize-css": "^0.97.8",
     "noisejs": "^2.1.0",
     "rollup-plugin-babel": "^2.6.1",
     "simplex-noise": "^2.2.0",
-    "webpack": "^1.13.3"
+    "webpack": "^1.13.3",
+    "webworker-threads": "^0.7.9",
+    "worker-loader": "^0.7.1"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^3.0.0-beta.3",
@@ -31,6 +34,7 @@
     "extended-define-webpack-plugin": "^0.1.2",
     "html-webpack-plugin": "^2.24.1",
     "jquery": "^3.1.1",
+    "platform": "^1.3.3",
     "raw-loader": "^0.5.1",
     "webpack-combine-loaders": "^2.0.0",
     "webpack-dev-server": "^1.16.2",
