--- a/package.json
+++ b/package.json
@@ -1,49 +1,66 @@
 {
-  "name": "three",
+  "name": "minecraft-threejs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "scripts": {
+    "eslint": "eslint ./src/**/*.js",
+    "start": "nodemon --watch ./build-tools/ --exec babel-node build-tools/npm-scripts/webpack-dev.js"
+  },
   "dependencies": {
     "alea": "0.0.9",
     "babel": "^6.5.2",
     "babel-cli": "^6.18.0",
     "babel-plugin-external-helpers": "^6.18.0",
     "babel-plugin-transform-es2015-modules-amd": "^6.18.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.18.0",
     "benchmark": "^2.1.2",
     "dat-gui": "^0.5.0",
     "lodash": "^4.17.2",
-    "materialize-css": "^0.97.8",
+    "materialize-css": "^0.100.2",
     "noisejs": "^2.1.0",
-    "rollup-plugin-babel": "^2.6.1",
+    "rollup-plugin-babel": "^3.0.3",
     "simplex-noise": "^2.2.0",
-    "webpack": "^1.13.3",
+    "webpack": "^3.10.0",
     "webworker-threads": "^0.7.9",
-    "worker-loader": "^0.7.1"
+    "worker-loader": "^1.1.0"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^3.0.0-beta.3",
     "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.8",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-module-resolver": "^3.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.16.0",
+    "clean-webpack-plugin": "^0.1.17",
     "copy-webpack-plugin": "^4.0.1",
+    "eslint": "^4.15.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-filenames": "^1.2.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsdoc": "^3.3.1",
     "express": "^4.14.0",
     "extended-define-webpack-plugin": "^0.1.2",
+    "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.24.1",
+    "install": "^0.10.2",
     "jquery": "^3.1.1",
+    "nodemon": "^1.14.11",
+    "npm": "^5.6.0",
     "platform": "^1.3.3",
     "raw-loader": "^0.5.1",
+    "react-dev-utils": "^5.0.0",
+    "react-error-overlay": "^1.0.10",
     "webpack-combine-loaders": "^2.0.0",
-    "webpack-dev-server": "^1.16.2",
+    "webpack-dev-server": "^2.11.0",
     "webpack-hot-middleware": "^2.13.1",
     "webpack-inject-loader": "^1.5.0"
-  },
-  "scripts": {
-    "start": "babel-node webpack.conf.js",
-    "build": "babel-node webpack.dist.conf.js"
   },
   "author": "",
   "license": "ISC"
