--- a/package.json
+++ b/package.json
@@ -17,11 +17,19 @@
     "babel-preset-es2015": "^6.18.0",
     "benchmark": "^2.1.2",
     "dat-gui": "^0.5.0",
+    "gpu.js": "^1.0.0",
     "lodash": "^4.17.2",
     "materialize-css": "^0.100.2",
+    "mobx": "^3.4.1",
+    "mobx-react": "^4.3.5",
     "noisejs": "^2.1.0",
+    "promise-throttle": "^0.3.1",
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "rollup-plugin-babel": "^3.0.3",
     "simplex-noise": "^2.2.0",
+    "three": "^0.89.0",
     "webpack": "^3.10.0",
     "webworker-threads": "^0.7.9",
     "worker-loader": "^1.1.0"
@@ -32,31 +40,43 @@
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.2",
     "babel-plugin-module-resolver": "^3.0.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-export-extensions": "^6.22.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.16.0",
     "clean-webpack-plugin": "^0.1.17",
     "copy-webpack-plugin": "^4.0.1",
-    "eslint": "^4.15.0",
+    "css-hot-loader": "^1.3.5",
+    "css-loader": "^0.28.9",
+    "eslint": "^4.16.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-filenames": "^1.2.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsdoc": "^3.3.1",
+    "eslint-plugin-react": "^7.5.1",
     "express": "^4.14.0",
     "extended-define-webpack-plugin": "^0.1.2",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.24.1",
+    "image-webpack-loader": "^3.4.2",
     "install": "^0.10.2",
     "jquery": "^3.1.1",
+    "jsx-control-statements": "^3.2.8",
+    "node-sass": "^4.7.2",
     "nodemon": "^1.14.11",
     "npm": "^5.6.0",
     "platform": "^1.3.3",
     "raw-loader": "^0.5.1",
     "react-dev-utils": "^5.0.0",
     "react-error-overlay": "^1.0.10",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.1",
     "webpack-combine-loaders": "^2.0.0",
     "webpack-dev-server": "^2.11.0",
     "webpack-hot-middleware": "^2.13.1",
