--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "eslint": "eslint ./src/**/*.js",
-    "start": "nodemon --watch ./build-tools/ --exec babel-node build-tools/npm-scripts/webpack-dev.js"
+    "start": "nodemon --watch ./build-tools/ --exec babel-node build-tools/npm-scripts/webpack-dev.js",
+    "build": "babel-node build-tools/npm-scripts/webpack-live.js"
   },
   "dependencies": {
     "alea": "0.0.9",
@@ -16,7 +17,8 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.18.0",
     "benchmark": "^2.1.2",
-    "dat-gui": "^0.5.0",
+    "classnames": "^2.2.5",
+    "dat.gui": "^0.6.5",
     "gpu.js": "^1.0.0",
     "lodash": "^4.17.2",
     "materialize-css": "^0.100.2",
@@ -77,6 +79,7 @@
     "react-error-overlay": "^1.0.10",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
+    "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack-combine-loaders": "^2.0.0",
     "webpack-dev-server": "^2.11.0",
     "webpack-hot-middleware": "^2.13.1",
