--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "rollup-plugin-babel": "^3.0.3",
     "simplex-noise": "^2.2.0",
     "three": "^0.89.0",
+    "three-mtl-loader": "^1.0.2",
+    "three-obj-loader": "^1.1.3",
     "webpack": "^3.10.0",
     "webworker-threads": "^0.7.9",
     "worker-loader": "^1.1.0"
