--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,4 +2,4 @@ version: 0.2
 phases:
  build:
    commands:
-     - aws s3 sync --delete . --include ./dist "https://s3.console.aws.amazon.com/s3/buckets/radswiat/minecraft/"
+     - aws s3 sync --delete . --include ./dist "s3://radswiat/minecraft"
