--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,5 +1,5 @@
 version: 0.2
 phases:
- build:
+ post_build:
    commands:
-     - aws s3 sync --debug "s3://radswiat/minecraft"
+     - aws s3 sync --debug s3://radswiat/minecraft
