Optimization and better noise

--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
     "build": "babel-node build-tools/npm-scripts/webpack-live.js"
   },
   "dependencies": {
+    "@types/dat.gui": "^0.7.5",
     "@types/noisejs": "^0.0.28",
     "@types/three": "^0.103.2",
     "classnames": "^2.2.6",
-    "dat.gui": "^0.7.2",
+    "dat.gui": "^0.7.7",
     "gpu.js": "^1.4.3",
     "history": "^5.0.0",
     "lodash": "^4.17.15",
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
     "noisejs": "^2.1.0",
+    "p-queue": "^6.4.0",
     "promise-throttle": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
