Playing with actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,9 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
+    - name: Yarn install
+      run: yarn install
+
     # Runs a single command using the runners shell
     - name: Build production
       run: yarn build
