--- a/package.json
+++ b/package.json
@@ -16,25 +16,20 @@
     "@types/three": "^0.103.2",
     "classnames": "^2.2.6",
     "dat.gui": "^0.7.7",
-    "gpu.js": "^1.4.3",
     "history": "^5.0.0",
     "lodash": "^4.17.15",
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
     "noisejs": "^2.1.0",
     "p-queue": "^6.4.0",
-    "promise-throttle": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
-    "simplex-noise": "^2.4.0",
     "three": "^0.117.1",
-    "three-mtl-loader": "^1.0.2",
-    "three-obj-loader": "^1.1.3",
-    "webworker-threads": "^0.7.15",
-    "worker-loader": "^2.0.0"
+    "worker-loader": "^2.0.0",
+    "jquery": "^3.5.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.1",
@@ -70,26 +65,14 @@
     "babel-plugin-styled-components": "^1.10.6",
     "cross-env": "^7.0.2",
     "eslint": "^7.2.0",
-    "eslint-config-airbnb-base": "^13.0.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-filenames": "^1.3.2",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jsdoc": "^3.7.1",
     "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.9.1",
     "express": "^4.16.3",
     "fork-ts-checker-webpack-plugin": "^5.0.0",
-    "install": "^0.11.0",
-    "jquery": "^3.5.1",
     "jsx-control-statements": "^3.2.8",
     "neutrino": "^9.2.0",
     "node-sass": "^4.14.1",
-    "nodemon": "^1.17.5",
-    "npm": "^6.1.0",
-    "platform": "^1.3.5",
     "prettier": "^2.0.5",
-    "react-dev-utils": "^5.0.1",
-    "react-error-overlay": "^4.0.0",
     "sass-loader": "^8.0.2",
     "styled-bootstrap-grid": "^3.1.0",
     "styled-components": "^5.1.1",
